--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,20 +1,33 @@
-
-
-
-Flask ==2.3.3
-Flask-Cors ==4.0.0
-Werkzeug ==2.3.7
-python-dotenv ==1.0.0
-openai >=1.0.0
-Pillow
-google-generativeai
-langchain 
-langchain-community 
-requests 
-textblob 
-torch
-transformers
-
-
-
-
+attr==0.3.2
+ConfigParser==7.1.0
+contextlib2==21.6.0
+cryptography==44.0.0
+docutils==0.21.2
+filelock==3.16.1
+Flask==3.1.0
+flask_cors==5.0.0
+HTMLParser==0.0.2
+importlib_metadata==8.0.0
+ipython==8.12.3
+ipywidgets==8.1.5
+Jinja2==3.0.3
+jnius==1.1.0
+keyring==25.6.0
+langchain==0.3.13
+mock==5.1.0
+openai==1.58.1
+Pillow==11.0.0
+protobuf==5.29.2
+pyOpenSSL==24.3.0
+pytest==8.3.4
+python-dotenv==1.0.1
+railroad==0.5.0
+redis==5.2.1
+Sphinx==8.1.3
+textblob==0.18.0.post0
+thread==2.0.5
+torch==2.5.1
+tornado==6.4.2
+transformers==4.47.1
+urllib3_secure_extra==0.1.0
+xmlrpclib==1.0.1
